@@ -65,9 +65,9 @@ if '--pydevd' in sys.argv or os.getenv('PYDEVD', None):
     # The following is for starting remote debugging in Eclipse with Pydev.
     # Adjust the path to your location and version of Eclipse and Pydev.
     if platform.platform().startswith('Linux'):
-        pysrc = "/opt/liclipse/plugins/org.python.pydev_5.4.0.201611281405/pysrc"
+        pysrc = "/opt/liclipse/plugins/org.python.pydev_5.7.0.201704111135/pysrc"
     elif platform.platform().startswith('Darwin'):
-        pysrc = "/Applications/LiClipse.app/Contents/liclipse/plugins/org.python.pydev_5.4.0.201611281405/pysrc"
+        pysrc = "/Applications/LiClipse.app/Contents/liclipse/plugins/org.python.pydev_5.7.0.201704111135/pysrc"
     else:
         raise Exception("Platform %s not supported by pydevd." % platform.platform())
     sys.path.append(pysrc)
