@@ -210,6 +210,9 @@ New in v0.8.00 (2016/07/??)
     clarifies that verify compares the restored files to hashes stored at
     backup date, while --compare-data compares restored files to files
     in target_path.
+* Fixed bug #1265765 with patches from Matthias Larisch and Edgar Soldin
+  - SSH Paramiko backend now uses BufferedFile implementation to enable
+    collecting the entire list of files on the backend.
 
 
 New in v0.7.08 (2016/07/02)
